--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -39,6 +39,11 @@ dependencies:
   cupertino_icons: ^1.0.8
   google_fonts: ^6.2.1
   firebase_database: ^11.3.5
+  shared_preferences: ^2.5.3
+  uuid: ^4.5.1
+  provider: ^6.1.5
+  intl: ^0.20.2
+  firebase_core: ^3.13.0
 
 dev_dependencies:
   flutter_test:
